Implemented getAllStakeholders method + Defining specific error handling
