# server/src/routes/stakeholder.routes.ts
@@ -2,7 +2,7 @@ import { handleValidationErrors } from '@middlewares/validation.middleware';
 import express from 'express';
 import { authenticateUser } from '@middlewares/auth.middleware';
 import { authorizeRoles } from '@middlewares/role.middleware';
-import { addStakeholderController } from '@controllers/stakeholder.controllers';
+import { addStakeholderController, getAllStakeholdersController } from '@controllers/stakeholder.controllers';
 import { validateStakeholder } from '@utils/validators/stakeholder.validator';
 
 const router = express.Router();
@@ -15,5 +15,11 @@ router.post(
     handleValidationErrors,
     addStakeholderController,
   );
+
+  router.get('/', 
+              authenticateUser,
+              authorizeRoles('PLANNER', 'DEVELOPER'), 
+              handleValidationErrors,
+              getAllStakeholdersController); //Get All Stakeholders
 
   export const stakeholderRoutes = router;
