# server/src/services/stakeholder.service.ts
@@ -1,7 +1,10 @@
 import Stakeholder from '../schemas/stakeholder.schema';
 import { CustomError } from '@utils/customError';
 import { IStakeholder } from '@interfaces/stakeholder.interface';
+import { StakeholderNotFoundError } from '@utils/errors';
 
+
+//Add new stakeholder
 export const addingStakeholder = async (
     stakeholderData: any,
   ): Promise<IStakeholder> => {
@@ -18,3 +21,17 @@ export const addingStakeholder = async (
       throw new CustomError('Internal Server Error', 500);
     }
   };
+
+
+  // Get all stakeholders 
+  export const getAllStakeholders = async (): Promise<IStakeholder[]> => {
+    const Allstakeholders = await Stakeholder.find(); // Fetch all stakeholders
+  
+     // Not Found Stakeholder
+  if (Allstakeholders.length === 0) {
+    throw new StakeholderNotFoundError();
+  }
+
+       return Allstakeholders;
+  };
+  
